--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,9 @@ dependencies {
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	implementation 'org.springframework.boot:spring-boot-starter-aop'
+	implementation 'org.aspectj:aspectjrt:1.9.22'
+	implementation 'org.aspectj:aspectjweaver:1.9.22'
 }
 
 tasks.named('test') {
