--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,8 @@ dependencies {
 	implementation 'org.aspectj:aspectjrt:1.9.22'
 	implementation 'org.aspectj:aspectjweaver:1.9.22'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	runtimeOnly 'org.postgresql:postgresql'
+
 
 }
 
